6. Solo Project Hometown Homepage/2. Solo Project - Hometown Homepage/styles.css
/**
Palette: https://scrimba.com/links/hometown-palette
RED: #E63946
LIGHT: #F1FAEE
AQUA: #A8DADC
LIGHT BLUE: #457B9D
DARK BLUE: #1D3557
*/

@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap");

:root {
  --RED: #e63946;
  --LIGHT: #f1faee;
  --AQUA: #a8dadc;
  --LIGHTBLUE: #457b9d;
  --DARKBLUE: #1d3557;
}

body {
  margin: 0;
  text-align: center;
  font-family: "Titillium Web", monospace;
  background: linear-gradient(var(--AQUA), var(--LIGHTBLUE));
}

/* i changed the width of imgs from 100px*/
img {
  width: 300px;
  border: 3px solid var(--DARKBLUE);
  border-radius: 50%;
}

.hero {
  background-image: url(images/cinci_skyline.jpg);
  background-size: cover;
  height: 100vh;
}

.hero h1 {
  position: absolute;
  left: 50%;
  top: 35%;
  transform: translate(-50%, -50%);

  text-align: center;
  /* text-shadow: 2px 2px #1d3557; */
  color: var(--LIGHT);
  font-size: 50px;
  font-weight: 700;
}

.hero h2 {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  margin: 5px;

  text-align: center;
  color: var(--LIGHT);
  font-size: 20px;
  font-weight: 600;
}

/*  ACTIVITIES SECTION  */
.activities {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.zoo,
.kings-island,
.aquarium {
  display: flex;
  flex-direction: column;
}

/*  used the margin-right and margin-left property
set to "auto". this only works because both <h3> and <p> are block level elements and have an explicitly stated width  */
.activities h3,
.activities p {
  max-width: 300px;
  margin-top: 30px;
  margin-left: auto;
  margin-right: auto;
}

.activities h3 {
  font-size: 20px;
}

#header-activities {
  font-size: 30px;
  font-weight: 700;
  text-align: center;
  margin-bottom: 40px;
}

